--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@
         </div>
 
         <div class="s-hero__video">
-            <a class="s-hero__video-link" href="https://www.youtube.com/@gooseyinc" data-lity="">
+            <a class="s-hero__video-link" href="https://www.youtube.com/embed/4GZK-PcY4Hk" data-lity="">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M21 12l-18 12v-24z"/></svg>
-                <span class="s-hero__video-text">Play Video</span>
+                <span class="s-hero__video-text">Play</span>
             </a>
         </div>
 
