--- a/index.html
+++ b/index.html
@@ -4,10 +4,30 @@
 
     <!--- basic page needs
     ================================================== -->
-    <meta charset="utf-8">
-    <title>Goosey Inc!</title>
-    <meta name="description" content="Special solutions for enterprise-level Industry">
-    <meta name="author" content="Goosey, Inc!">
+<!-- SEO -->
+<meta charset="UTF-8">
+<title>Goosey Inc!</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="Goosey, Inc. delivers blockchain-powered infrastructure and software solutions for enterprises and smart cities clean, scalable and future-ready.">
+<meta name="keywords" content="blockchain, smart cities, enterprise software, clean energy, mining infrastructure, nuclear powered datacenters">
+<meta name="author" content="Goosey, Inc.">
+<meta name="robots" content="index, follow">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:title" content="Goosey, Inc. – Redefining Infrastructure: from Nuclear core to Blockchain code.">
+<meta property="og:description" content="Redefining digital infrastructure with blockchain and nuclear-powered data solutions.">
+<meta property="og:image" content="https://goosey.org/images/logo.png">
+<meta property="og:url" content="https://goosey.org">
+
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Goosey, Inc.">
+<meta name="twitter:description" content="Redefining Infrastructure: from Nuclear core to Blockchain code.">
+<meta name="twitter:image" content="https://goosey.org/images/logo.png">
+
+<!-- Favicon -->
+<link rel="icon" href="/favicon.ico" type="image/x-icon">
 
     <!-- mobile specific metas
     ================================================== -->
@@ -22,15 +42,13 @@
     ================================================== -->
     <script src="js/modernizr.js"></script>
     <script defer src="js/fontawesome/all.min.js"></script>
-
-    <!-- favicons
-    ================================================== -->
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-	<link rel="icon" href="favicon.ico">
-	<link rel="shortcut icon" href="favicon.png">
-    <link rel="manifest" href="site.webmanifest">
+	
+	<!-- Favicons -->
+<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+<link rel="manifest" href="site.webmanifest">
+<link rel="shortcut icon" href="favicon.ico">
 
 </head>
 
@@ -110,8 +128,7 @@
 
                    <p>
     We are <span class="highlight-text">Goosey, Inc.</span><br> 
-	We like create great brands <br>
-    on different sectors.
+	Redefining Infrastructure: from Nuclear core to Blockchain code.<br>
 </p>
     
                     <footer>
