--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
             </div>
             <div class="column large-6 w-900-stack">
                 <h1 class="display-1" data-aos="fade-up">
-                    We specialize in mining farm facility setup, system management, network design and energy management. 
+                    We specialize in mining farm facility setup, system architecture design, network design and energy management. 
                 </h1>
             </div>
             <div class="column large-6 w-900-stack">
