--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
 <meta property="og:description" content="Redefining digital infrastructure with blockchain and nuclear-powered data solutions.">
 <meta property="og:image" content="https://goosey.org/images/logo.png">
 <meta property="og:url" content="https://goosey.org">
+<meta property="og:site_name" content="Goosey Inc!">
 
 <!-- Twitter Card -->
 <meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:site" content="@gooseyinc">
 <meta name="twitter:title" content="Goosey, Inc.">
 <meta name="twitter:description" content="Redefining Infrastructure: from Nuclear core to Blockchain code.">
 <meta name="twitter:image" content="https://goosey.org/images/logo.png">
