--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
                 <ul class="s-header__nav">
                     <li><a class="smoothscroll" href="#hero" title="Intro">Home</a></li>
                     <li><a class="smoothscroll" href="#about" title="About">About</a></li>
+					<li><a href="aiops.html" title="AIOps">AIOps</a></li>
                     <li><a class="smoothscroll" href="#services" title="Services">Specialties</a></li>
                     <li><a class="smoothscroll" href="#portfolio" title="Works">Works</a></li>
                 </ul>
