--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <meta name="keywords" content="blockchain, smart cities, enterprise software, clean energy, mining infrastructure, nuclear powered datacenters">
 <meta name="author" content="Goosey, Inc.">
 <meta name="robots" content="index, follow">
+<meta name="facebook-domain-verification" content="nrx23hef0a18wt2wtqcy3iqnkmaxyd" />
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
